Prefixing "cf-zoho" to "lsx-cf-zoho" (words)

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "cf-zoho",
+  "name": "lsx-cf-zoho",
   "version": "2.0.0",
   "description": "",
   "main": "gulpfile.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lightspeeddevelopment/cf-zoho"
+    "url": "git+https://github.com/lightspeeddevelopment/lsx-cf-zoho"
   },
   "keywords": [
     "lsx"
@@ -13,7 +13,7 @@
   "author": "LightSpeed",
   "license": "GPLv3 or later",
   "bugs": {
-    "url": "https://github.com/lightspeeddevelopment/cf-zoho/issues"
+    "url": "https://github.com/lightspeeddevelopment/lsx-cf-zoho/issues"
   },
   "dependencies": {
     "gulp": "^3.9.1",
