--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "url": "https://github.com/lightspeeddevelopment/cf-zoho/issues"
   },
   "dependencies": {
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.0",
     "gulp-gettext": "^0.3.0",
     "gulp-sort": "^2.0.0",
     "gulp-wp-pot": "^2.3.2",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "minimatch": "^3.0.2"
   }
 }
