--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-sort": "^2.0.0",
     "gulp-wp-pot": "^2.3.2",
     "lodash": "^4.17.11",
-    "minimatch": "^3.0.2"
+    "minimatch": "^3.0.2",
+    "minimist": "^1.2.2"
   }
 }
