--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-gettext": "^0.3.0",
     "gulp-sort": "^2.0.0",
     "gulp-wp-pot": "^2.3.2",
+    "kind-of": "^6.0.3",
     "lodash": "^4.17.11",
     "minimatch": "^3.0.2",
     "minimist": "^1.2.3"
