--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,18 @@
         "php": ">=7.2",
         "composer/installers": "^1.7.0"
     },
-    "license": "GPL-3.0-or-later",
-    "minimum-stability": "dev",
     "require-dev": {
-    }
+        "phpunit/phpunit": "^5.7",
+        "wp-coding-standards/wpcs": "^2.3",
+        "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
+        "wpackagist-theme/lsx": "^2.8.0",
+        "wpackagist-plugin/caldera-forms": "^1.9.2"
+    },
+    "repositories":[{
+        "type":"composer",
+        "url":"https://wpackagist.org"
+    }],
+    "license": "GPL-3.0-or-later",
+    "prefer-stable": true,
+    "minimum-stability": "dev"
 }
