--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -36,7 +36,7 @@ build:
       tests:
         override:
           - php-scrutinizer-run
-          - command: phpcs-run -p -s -v -n --standard=./.phpcs.xml --extensions=php --ignore=*/wordpress/*
+          - command: phpcs-run --config .phpcs.xml
       dependencies:
         before:
           - composer require --dev johnpbloch/wordpress
