--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "wp-coding-standards/wpcs": "^2.3",
         "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
         "wpackagist-theme/lsx": "^2.8.0",
-        "wpackagist-plugin/caldera-forms": "^1.9.2"
+        "wpackagist-plugin/caldera-forms": "^1.9.2",
+		"phpcompatibility/phpcompatibility-wp": "^2.1.0"
     },
     "repositories":[{
         "type":"composer",
